# psrutils

./: .gitignore  README.md  pyproject.toml
src/psrutils/: __init__.py  constants.py  core.py  cube.py  iono.py  jit_kernels.py  kernels.py  logger.py  misc.py  null_sim.py  plotting.py  polarisation.py  profile.py  rm.py
src/psrutils/apps/: fluxcal.py  plot.py  plot_compare.py  plot_grid.py  plot_pol_grid.py  plot_stack.py  prof.py  rmiono.py  rmsynth.py  shift_test.py  snr.py
src/psrutils/data/: lb_runs_joint_null_T_lb.npy  lb_runs_joint_null_p_grid.npy  sigma_pa_table.npy
