[project]
name = "psrutils"
version = "0.0.1"
description = "A collection of Python-based utilities to analyse PSRCHIVE archives."
authors = [
    { name = "Christopher Lee" },
]
license = { text = "MIT License" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "click",
    "cmasher",
    "matplotlib",
    "numba",
    "numpy<2",
    "scipy",
    "psrqpy",
    "ruff",
    "tqdm",
    "uncertainties",
    "spinifex",
    "rtoml",
]

[project.scripts]
pu-plot = "psrutils.apps.plot:main"
pu-rmsynth = "psrutils.apps.rmsynth:main"

[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
psrutils = ["data/*"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"
include = [
    "pyproject.toml",
    "src/psrutils/*.py",
    "src/psrutils/apps/*.py",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
# Ignore wildcard imports in init files
"__init__.py" = ["F403"]
# Ignore unused imports due to cmasher
"plotting.py" = ["F401"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces, rather than tabs
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"